#302 Add frontend and backend binaries